# BotParserOfTenders

./: .gitignore  pyproject.toml  ruff.toml
bot-parse/: .template.env  bot.py  config.default.yaml  main.py  package.json  test.py
bot-parse/core/: config.py
bot-parse/parsers/: base_parser.py  check_new_post.py  etpgpb.py  lukhoil.py  sber.py  tektorg.py
bot-parse/routers/: __init__.py  start.py
