[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "bs4>=0.0.2",
    "pydantic>=2.11.10",
    "pydantic-settings[yaml]>=2.12.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "zeep>=4.3.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.mypy]
strict = true
